chrome horizontal scroll fixed

--- a/app/styles/film.less
+++ b/app/styles/film.less
@@ -1,7 +1,7 @@
 /* film */
 
 .film {
-	overflow-x: hidden;
+	overflow: hidden;
 
 	/* poster, title, year, status*/
 	.f-details {
